[package]
name = "resolve-aws-secrets"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
aws-sdk-secretsmanager = "1.41.0"
aws-sdk-ssm = "1.42.0"
futures = "0.3"
aws-smithy-types = "1.2.0"
aws-smithy-http = "0.60.9"
aws-config = "1.5.5"
aws-types = "1.3.3"

[dev-dependencies]
aws-sdk-secretsmanager = { version ="1.41.0", features = ["test-util"] }
aws-sdk-ssm = { version = "1.42.0", features = ["test-util"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true



